<resources>
    <string name="app_name">Listen to me Morty</string>
    <string name="locations">Локации:</string>
    <string name="characters">Персонажи:</string>
    <string name="residents">Резиденты:</string>
    <string name="name">Имя:</string>
    <string name="type">Тип:</string>
    <string name="state">Статус:</string>
    <string name="species">Вид:</string>
    <string name="location">Локация:</string>
    <string name="logo">Логотип</string>
    <string name="origin">Происхождение:</string>
    <string name="episodes">Эпизоды:</string>
    <string name="favourites">Избранное</string>
    <string name="image_of_character_descr">Image of character</string>
</resources>